<resources>
    <string name="app_name">DnD Companion</string>
    <string name="new_character">New Character</string>
    <string name="character_name">Name</string>
    <string name="character_race_class">Race &amp; Class</string>
    <string name="character_s_name">Character\'s Name</string>
    <string name="ability_scores">Ability Scores</string>
    <string name="abilMod">+Num</string>
    <string name="abilResult">0</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="standard">Default</string>
    <string-array name="races">
        <item>Dragonborn: STR +2, CHA +1</item>
        <item>Half-Elf: CHA +2</item>
        <item>Half-Orc: STR +2, CON +1</item>
        <item>High Elf: DEX +2, INT +1</item>
        <item>Hill Dwarf: CON +2, WIS +1</item>
        <item>Human: +1 to All</item>
        <item>Lightfoot Halfling: DEX +2, CHA +1</item>
        <item>Rock Gnome: INT +2, CON +1</item>
        <item>Tiefling: INT +1, CHA +2</item>
    </string-array>
    <string-array name="classes">
        <item>Barbarian</item>
        <item>Bard</item>
        <item>Cleric</item>
        <item>Druid</item>
        <item>Fighter</item>
        <item>Monk</item>
        <item>Paladin</item>
        <item>Ranger</item>
        <item>Rogue</item>
        <item>Sorcerer</item>
        <item>Warlock</item>
        <item>Wizard</item>
    </string-array>
    <string-array name="scores">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
    <string name="race_class_error">Not all fields chosen</string>
    <string name="def">Default</string>
    <string name="weapons">Weapons</string>
    <string name="combat">Combat</string>
    <string name="delete">Delete</string>
    <string name="hit_points">Hit Points</string>
    <string-array name="weapons">
        <item>Club, 1d4, STR</item>
        <item>Dagger,1d4, DEX</item>
        <item>Greatclub, 1d8, STR</item>
        <item>Handaxe, 1d6, DEX</item>
        <item>Javelin, 1d6, DEX</item>
        <item>Light hammer, 1d4, DEX</item>
        <item>Mace, 1d6, STR</item>
        <item>Quarterstaff, 1d6, STR</item>
        <item>Sickle, 1d4, STR</item>
        <item>Spear, 1d6, STR</item>
        <item>Crossbow, 1d8, DEX</item>
        <item>Dart, 1d4, DEX</item>
        <item>Shortbow, 1d6, DEX</item>
        <item>Sling, 1d4, DEX</item>
        <item>Battleaxe , 1d8, STR</item>
        <item>Flail, 1d8, STR</item>
        <item>Glaive, 1d10, STR</item>
        <item>Greataxe, 1d12, STR</item>
        <item>Greatsword, 2d6, STR</item>
        <item>Halberd, 1d10, STR</item>
        <item>Lance, 1d12, STR</item>
        <item>Longsword , 1d8, STR</item>
        <item>Maul, 2d6, STR</item>
        <item>Morningstar, 1d8, STR</item>
        <item>Pike, 1d10, STR</item>
        <item>Rapier, 1d8, DEX</item>
        <item>Scimitar, 1d6, DEX</item>
        <item>Shortsword, 1d6, DEX</item>
        <item>Trident, 1d6, STR</item>
        <item>War pick, 1d8, STR</item>
        <item>Warhammer, 1d8, STR</item>
        <item>Whip, 1d4, DEX</item>
        <item>Crossbow (hand), 1d6, DEX</item>
        <item>Crossbow (heavy), 1d10, DEX</item>
        <item>Longbow, 1d8, DEX</item>
    </string-array>

    <string name="account">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="sign_out">Sign Out</string>
    <string name="name">Name</string>
    <string name="attack">Attack</string>
</resources>
