<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   tools:context=".CombatFragment"
                                                   android:background="@color/colorPrimaryLight">
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/name"
            android:ems="10"
            android:id="@+id/specify"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:importantForAutofill="no"
            app:layout_constraintTop_toBottomOf="@+id/weaponDes" android:layout_marginTop="24dp"
            android:layout_marginBottom="48dp" app:layout_constraintBottom_toTopOf="@+id/attack"/>
    <Button
            android:text="@string/attack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/attack" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/specify" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/def"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weaponDes" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="24dp" app:layout_constraintBottom_toTopOf="@+id/specify"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
</androidx.constraintlayout.widget.ConstraintLayout>