<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   tools:context=".DetailFragment"
                                                   android:background="@color/colorPrimaryLight">
    <TextView
            android:text="@string/default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name" android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toTopOf="@+id/levelText"/>
    <TextView
            android:text="@string/default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/levelText" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/strText" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/levelText" app:layout_constraintEnd_toStartOf="@+id/wisText"
    />
    <TextView
            android:text="@string/default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/wisText" android:layout_marginStart="80dp"
            app:layout_constraintStart_toEndOf="@+id/strText" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/levelText"/>
    <TextView
            android:text="@string/default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dexText" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/strText" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toStartOf="@+id/intText"
    />
    <TextView
            android:text="@string/default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/intText" android:layout_marginStart="80dp"
            app:layout_constraintStart_toEndOf="@+id/dexText" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/wisText"/>
    <TextView
            android:text="@string/default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/conText" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/dexText"
            app:layout_constraintEnd_toStartOf="@+id/chaText"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintBottom_toTopOf="@+id/weaponButton"
            app:layout_constraintVertical_chainStyle="packed"/>
    <TextView
            android:text="@string/default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chaText"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/intText" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="80dp" app:layout_constraintStart_toEndOf="@+id/conText"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toTopOf="@+id/weaponButton" android:layout_marginBottom="16dp"/>
    <Button
            android:text="@string/weapons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/weaponButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="48dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="48dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/conText"
            app:layout_constraintBottom_toTopOf="@+id/combatButton"/>
    <Button
            android:text="@string/combat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/combatButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="48dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="48dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/weaponButton"/>
    <Button
            android:text="@string/delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/deleteButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="48dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="48dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/combatButton" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>